log/build_2026-03-01_21-39-47/master_ros2_pkg/stderr.log
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:22:2: error: expected ‘;’ after class definition
   22 | }
      |  ^
      |  ;
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp: In constructor ‘PublisherNode::PublisherNode()’:
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:10:73: error: ‘class rclcpp::QoS’ has no member named ‘transient_’; did you mean ‘transient_local’?
   10 |         auto qos_profile = rclcpp::QoS(rclcpp::KeepLast(10)).reliable().transient_ local();
      |                                                                         ^~~~~~~~~~
      |                                                                         transient_local
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:11:9: error: ‘publisher_’ was not declared in this scope; did you mean ‘PublisherNode’?
   11 |         publisher_ = this->create_publisher<std_msgs::msg::String>("std_string_topic", qos_profile);
      |         ^~~~~~~~~~
      |         PublisherNode
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:12:9: error: ‘custom_publisher_’ was not declared in this scope; did you mean ‘count_publishers’?
   12 |         custom_publisher_ = this->create_publisher<master_ros2_interface::msg::CustomMsg>("custom_topic", qos_profile);
      |         ^~~~~~~~~~~~~~~~~
      |         count_publishers
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:18:9: error: ‘timer_’ was not declared in this scope; did you mean ‘timer_t’?
   18 |         timer_ = this->create_wall_timer(
      |         ^~~~~~
      |         timer_t
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:20:39: error: ‘publish_messages’ is not a member of ‘PublisherNode’
   20 |             std::bind(&PublisherNode::publish_messages, this));
      |                                       ^~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/publisher_node.dir/build.make:76: CMakeFiles/publisher_node.dir/src/publisher_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/publisher_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
